--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,11 +27,13 @@
 		--color-gray-90: #dad8d8;
 
 		/* --text-color is assigned to --color-gray-_ above */
-		--text-color-link: #2F81F7;
+		--text-color-link: #0a3065;
 		--text-color-link-active: #E6EDF3;
 		--text-color-link-visited: #7D8590;
 
 		--background-color: RGB(14,17,22);
+		--button: #0a306a;
+		--button-hover: #2662bb;
 	}
 }
 
@@ -312,7 +314,7 @@ h2 + .header-anchor {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	background-color: var(--background-color);
+	background-color: var(--button);
 	color: var(--text-color-link);
   }
   
@@ -338,5 +340,5 @@ h2 + .header-anchor {
   }
   
   .sticky-bottom-nav a:hover {
-	background-color: var(--background-color);
+	background-color: var(--button-hover);
   }
