--- a/content/posts.njk
+++ b/content/posts.njk
@@ -30,7 +30,7 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
 </ol> #}
 
 <div>
-  <olclass="postlist" style="counter-reset: start-from {{ postslistCounter + 1 - (pagination.pageNumber * 5) }}" >
+  <ol class="postlist" style="counter-reset: start-from {{ postslistCounter + 1 - (pagination.pageNumber * 5) }}" >
     {% for item in pagination.items %}
       <li class="postlist-item postlist-item-active">
           <a href="{{ item.page.url }}" class="postlist-link">{% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}</a>
@@ -41,16 +41,21 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
 </div>
 
 
+<div class="space"></div>
 <div>
   <ul class="flex-list sticky-bottom-nav">
     <li>
       {% if pagination.href.previous %}
         <a href="{{ pagination.href.previous }}">Prev</a>
+      {% else %}
+        <a class="disabled"></a>
       {% endif %}
     </li>
     <li>
       {% if pagination.href.next %}
         <a href="{{ pagination.href.next }}">Next</a>
+      {% else %}
+        <a class="disabled"></a>
       {% endif %}
     </li>
   </ul>
