--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,9 @@ li {
 	line-height: 1.5;
 }
 
+a {
+	text-decoration: none;
+}
 a[href] {
 	color: var(--text-color-link);
 }
@@ -360,3 +363,32 @@ h2 + .header-anchor {
 	justify-content: center;
 	margin:0 auto;
   }
+
+
+
+/* pagination */
+.wrapper ul{
+	display: flex;
+	padding: 8px;
+}
+.wrapper ul a {
+	text-decoration: none;
+}
+.wrapper ul li{
+	list-style-type: none;
+	line-height: 55px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 600;
+	cursor: pointer;
+	margin: 10px;
+	border-radius: 50px;
+	padding: 10px;
+}
+.wrapper ul li.btn{
+	line-height: 60px;
+	font-size: 22px;
+}
+.wrapper ul li.active{
+	color: var(--text-color-link);
+}
