--- a/css/index.css
+++ b/css/index.css
@@ -389,6 +389,7 @@ h2 + .header-anchor {
 	line-height: 60px;
 	font-size: 22px;
 }
-.wrapper ul li.active{
-	color: var(--text-color-link);
+.wrapper ul a li.active{
+	color: var(--text-color);
+	background-color: #32323a;
 }
