--- a/content/posts.njk
+++ b/content/posts.njk
@@ -51,7 +51,7 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
       page - 1
     })" > < </li>`;
   } else {
-    li += NOTHING_BUTTON('<')
+    li += NOTHING_BUTTON('_')
   }
 
   for (let currentPage = beforePages; currentPage <= afterPages; currentPage++) {
@@ -98,7 +98,7 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
       page + 1
     })" > > </li>`;
   } else {
-    li += NOTHING_BUTTON('>')
+    li += NOTHING_BUTTON('_')
   }
 
   pagination.innerHTML = li;
