--- a/content/posts.njk
+++ b/content/posts.njk
@@ -83,11 +83,24 @@ permalink: posts/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber 
       `;
       break;
     }
-
+    /**
+     * 첫 페이지의 pagination
+     */
+    
     li += `
       <a href="${pageLinks[currentPage]}">
       <li class="numb ${liActive}" onclick="elem(allPages, ${currentPage})" ><span>
       ${currentPage + 1}
+      </span></li>
+      </a>
+      `;
+  }
+
+  if(page == 0) {
+    li += `
+      <a href="${pageLinks[afterPages + 1]}">
+      <li class="numb" onclick="elem(allPages, ${afterPages + 1})" ><span>
+        ${afterPages + 2}
       </span></li>
       </a>
       `;
