--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,6 +4,15 @@ layout: layouts/base.njk
 {# Only include the syntax highlighter CSS on blog posts #}
 {%- css %}{% include "node_modules/prismjs/themes/prism-okaidia.css" %}{% endcss %}
 {%- css %}{% include "public/css/prism-diff.css" %}{%- endcss %}
+
+<figure>
+	{% set absoluteUrl %}{{ page.url  }}{% endset %}
+	{% if cover_url %}
+	{% image "{{ coverUrl }}", "{{title}} cover image"%}
+	{% else %}
+	{% endif %}
+</figure>
+
 <h1>{{ title }}</h1>
 
 <ul class="post-metadata pt-2">
