--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,24 @@
+/* reset */
+ol, ul, li
+{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
 /* Defaults */
 :root {
 	--font-family: -apple-system, system-ui, sans-serif;
