--- a/content/index.njk
+++ b/content/index.njk
@@ -18,7 +18,7 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
             <img class="cover-img" src="/covers/{{item.data.cover}}" alt="cover image" height="auto" loading="lazy" decoding="async"/>
           {% elif(item.data.coverURL) %}
             {# <img class="cover-img" src="{{item.data.coverURL}}" alt="cover image" height="auto" loading="lazy" decoding="async"/> #}
-            <img class="cover-img" src={% convert item.data.coverURL %} alt="cover image" height="auto" loading="lazy" decoding="async"/>
+            <img class="cover-img" src={% convert item.data.coverURL %} alt="cover image" height="auto" />
           {% endif %}
 
           <div class="d-flex p-3 flex-direction-col">
