cover image resizing for efficency

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,4 @@
 reset
-/* ol, ul, li
-{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-} */
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -900,6 +891,18 @@ h2 + .header-anchor {
 .p-3 {
     padding: var(--base-size-16, 16px) !important;
 }
+.pl-3 {
+    padding-left: var(--base-size-16, 16px) !important;
+}
+.pt-3 {
+    padding-top: var(--base-size-16, 16px) !important;
+}
+.pb-3 {
+    padding-bottom: var(--base-size-16, 16px) !important;
+}
+.pr-3 {
+    padding-right: var(--base-size-16, 16px) !important;
+}
 .m-3 {
     margin: var(--base-size-16, 16px) !important;
 }
@@ -925,8 +928,8 @@ h2 + .header-anchor {
 }
 .cover-img {
 	object-fit: cover;
-	width: 92px;
-	height: 92px;
+	/* width: 92px;
+	height: 92px; */
 	border-radius:8px;
 }
 .flex-center {
@@ -971,4 +974,13 @@ blockquote {
 .active {
     background-color: var(--color-btn-outline-selected-bg);
 
+}
+
+.posts-container > ol, .posts-container > ul, .posts-container > li{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
