--- a/content/index.njk
+++ b/content/index.njk
@@ -9,7 +9,7 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
 {% set postslistCounter = postsCount %}
 {% set pageNumber = pagination.pageNumber %}
-<div>
+<div class="posts-container">
   <ol style="counter-reset: start-from {{ postslistCounter + 1 - (pagination.pageNumber * 5) }}" >
     <li>
     {% for item in pagination.items %}
@@ -22,10 +22,15 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
             <img class="cover-img" src={% convert item.data.coverURL %} alt="cover image" height="auto" />
           {% endif %}
 
-          <div class="d-flex p-3 flex-direction-col">
-            <h5 class="d-flex flex-items-center">
-                {% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}
-              </h5>
+          {# <div class="d-flex p-3 flex-direction-col">
+              <h3 class="d-flex flex-items-center">
+                  {% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}
+              </h3>
+            <div> #}
+          <div class="d-flex pl-3 pb-3 pr-3 flex-direction-col">
+              <h3 class="d-flex flex-items-center">
+                  {% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}
+              </h3>
             <div>
               <time class="postlist-date" datetime="{{ item.date | htmlDateString }}">Created at: {{ item.page.date | readableDate("yyyy년 LL월 dd일 hh시 mm분 ss초") }}</time>
             </div>
