add post and modify cover image and css

--- a/content/about/index.njk
+++ b/content/about/index.njk
@@ -41,6 +41,6 @@ eleventyNavigation:
   </section>
 </div>
 
-<script src="/js/p5.min.js"></script>
-<script src="/js/gameOfLife/index.js"></script>
+<script async src="/js/p5.min.js"></script>
+<script async src="/js/gameOfLife/index.js"></script>
 
