--- a/content/index.njk
+++ b/content/index.njk
@@ -18,15 +18,8 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
           {% if(item.data.cover) %}
             <img class="cover-img" src="/covers/{{item.data.cover}}" alt="cover image" height="auto" loading="lazy" decoding="async"/>
           {% elif(item.data.coverURL) %}
-            {# <img class="cover-img" src="{{item.data.coverURL}}" alt="cover image" height="auto" loading="lazy" decoding="async"/> #}
             <img class="cover-img" src={% convert item.data.coverURL %} alt="cover image" height="auto" />
           {% endif %}
-
-          {# <div class="d-flex p-3 flex-direction-col">
-              <h3 class="d-flex flex-items-center">
-                  {% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}
-              </h3>
-            <div> #}
           <div class="d-flex pl-3 pb-3 pr-3 flex-direction-col">
               <h3 class="d-flex flex-items-center">
                   {% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}
@@ -48,7 +41,7 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
 {% set _pagination =  pagination.links | dump %}
 {% set paginationLinks = pagination.links %}
 
-<script type="text/javascript">
+<script type="text/javascript" async>
   const pageLinks = `{{_pagination}}`.replaceAll('&quot;','').replaceAll('[','').replaceAll(']','').split(',')
   const postsCount = {{postsCount}}
   let allPages = pageLinks.length
