--- a/css/index.css
+++ b/css/index.css
@@ -927,9 +927,7 @@ h2 + .header-anchor {
 	flex-direction: column;
 }
 .cover-img {
-	object-fit: cover;
-	/* width: 92px;
-	height: 92px; */
+	object-fit: contain;
 	border-radius:8px;
 }
 .flex-center {
