--- a/public/css/index.css
+++ b/public/css/index.css
@@ -717,10 +717,9 @@ header {
 	text-align: right;
 	margin-left: -1.5rem;
 }
-.postlist-date,
-.postlist-item:before {
+.postlist-date {
 	font-size: 0.8125em; /* 13px /16 */
-	color: var(--color-gray-90);
+	color: var(--color-scale-gray-4);
 }
 .postlist-date {
 	word-spacing: -0.5px;
@@ -927,7 +926,6 @@ h2 + .header-anchor {
 	flex-direction: column;
 }
 .cover-img {
-	object-fit: contain;
 	border-radius:8px;
 }
 .flex-center {
@@ -981,4 +979,16 @@ blockquote {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+}
+
+.post-container {
+    max-height: 112px;
+}
+.post-title-container {
+    min-width: 128px;
+    white-space: nowrap;
+}
+.post-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
