add post coin change

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,6 +4,7 @@ layout: layouts/base.njk
 {# Only include the syntax highlighter CSS on blog posts #}
 {%- css %}{% include "node_modules/prismjs/themes/prism-okaidia.css" %}{% endcss %}
 {%- css %}{% include "public/css/prism-diff.css" %}{%- endcss %}
+{%- css %}{% include "public/css/gh-md-dark.css" %}{%- endcss %}
 
 <figure>
 	{% set absoluteUrl %}{{ page.url }}{% endset %}
@@ -31,7 +32,7 @@ layout: layouts/base.njk
 	<hr></hr>
 {% endif %}
 
-	<section class="post-content">
+	<section class="post-content markdown-body">
 		{{ content | safe }}
 	</section>
 <br>
