--- a/public/css/index.css
+++ b/public/css/index.css
@@ -994,3 +994,11 @@ h2 + .header-anchor {
 .katex-html {
     display: none;
 }
+
+img {
+    border-style: none;
+    max-width: 100%;
+    width: 320px;
+    box-sizing: content-box;
+    background-color: #0d1117;
+}
