--- a/css/index.css
+++ b/css/index.css
@@ -1002,3 +1002,13 @@ img {
     box-sizing: content-box;
     background-color: #0d1117;
 }
+
+.img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container img {
+    max-width: 100%;
+    max-height: 100%;
+  }
