add post coin change

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -997,8 +997,7 @@ h2 + .header-anchor {
 
 img {
     border-style: none;
-    max-width: 100%;
-    width: 320px;
+    max-width: 620px;
     box-sizing: content-box;
     background-color: #0d1117;
 }
