--- a/css/gh-md-dark.css
+++ b/css/gh-md-dark.css
@@ -101,8 +101,8 @@
   
   .markdown-body img {
     border-style: none;
-    max-width: 100%;
     box-sizing: content-box;
+    max-width: 607px;
     background-color: #0d1117;
   }
   
