--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>{{ title or metadata.title }}</title>
+		<title>{{ title or metadata.title }} | zerozoo-a의 블로그</title>
 		<meta name="description" content="{{ description or metadata.description }}">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
